# trafficmonitor

./: .gitignore  CMakeLists.txt  README.md  mySettings.json
src/: HlayoutPair.h  basic.h  colorbutton.cpp  colorbutton.h  colorspecifier.cpp  colorspecifier.h  connetiondetails.cpp  connetiondetails.h  debug.h  hoverwidget.cpp  hoverwidget.h  main.cpp  mmemory.h  networkport.cpp  networkport.h  optionsettings.cpp  optionsettings.h  specifybutton.cpp  specifybutton.h  textspecifier.cpp  textspecifier.h  trafficmonitor.cpp  trafficmonitor.h
